# Procedurking

./: .gitignore  .gitmodules  CMakeLists.txt  PROJECT_GENESIS_STATUS.md  checklist.md  vcpkg.json
shaders/: atmosphere.frag  atmosphere.vert  clouds.frag  clouds.vert  moon.frag  planet.frag  planet.vert  rings.frag  rings.vert  stars.frag  stars.vert
src/: Camera.cpp  Camera.h  CelestialBody.cpp  CelestialBody.h  DestructionManager.cpp  DestructionManager.h  GameState.cpp  GameState.h  GodPowers.cpp  GodPowers.h  Icosphere.cpp  Icosphere.h  LifeForm.cpp  LifeForm.h  PlanetManager.cpp  PlanetManager.h  PlanetaryRings.cpp  PlanetaryRings.h  PlanetarySystem.cpp  PlanetarySystem.h  Shader.cpp  Shader.h  Starfield.cpp  Starfield.h  StructuralIntegrityManager.cpp  StructuralIntegrityManager.h  TerrainSampler.cpp  TerrainSampler.h  VoxelAIDirector.cpp  VoxelAIDirector.h  VoxelClimateSimulator.cpp  VoxelClimateSimulator.h  VoxelCore.cpp  VoxelCore.h  VoxelMesher.cpp  VoxelMesher.h  VoxelPlanetGenerator.cpp  VoxelPlanetGenerator.h  VoxelShatteringEngine.cpp  VoxelShatteringEngine.h  (+3 more)
